For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
post-6.0 release changes:

2001-11-13  Kevin Layer  <layer@crikey>

	* fi-xemacs.el: fix for fix below

2001-11-01  Kevin Layer  <layer@crikey>

    from mikel for spr24742
	* fi-xemacs.el: don't contact lisp over and over again, cache the
	value used for the first menu item, and uncache it on the last. 

2001-06-20  Kevin Layer  <layer@crikey>

    from cox:
	* fi-basic-lep.el: spr24414

2001-05-22  Charles A. Cox  <cox@pie>

	* fi-basic-lep.el: use emacs-mule encoding.  bug10686

2001-01-05  Kevin Layer  <layer@ultra>

	* fi-subproc.el: add subprocess filter for tcp buffers, too (so
	the variable fi:subprocess-max-buffer-lines works).

2001-01-03  Kevin Layer  <layer@ultra>

	* fi-subproc.el: added new fi:subprocess-max-buffer-lines

*******************************************************************************
2.1.3

2000-10-21  Kevin Layer  <layer@ultra>

	* fi-compile.el: finish removing Doc0 reference
	* fi-site-init.el: fix "you must byte-recompile" message [bug9697]

2000-10-21  Kevin Layer  <layer@ultra>

	* Makefile: remove readme.htm depend
	* fi-compile.el: don't build readme0.htm anymore
	* local.mak: don't distribute Doc0.el

*******************************************************************************
<no version change>

2000-10-03  Kevin Layer  <layer@ultra>

	* move RELNOTES entries to RELNOTES.60, since I filed an rfe on
	them

*******************************************************************************
2.1.2

2000-09-26  Kevin Layer  <layer@ultra>

	* Makefile: fix xemacs location

*******************************************************************************
2.1.1
